Update footer, fix homepage overflow

--- a/htdocs/public/css/styles.css
+++ b/htdocs/public/css/styles.css
@@ -16,12 +16,17 @@
   position: absolute;
   bottom: -71px;
 
-  min-width: 3500px;
+  width: 100%;
   height: 100px;
   background-repeat: repeat-x;
   background-image: url(/public/assets/wave.svg);
   background-color: hsl(var(--b1) / var(--tw-bg-opacity));
   overflow: hidden;
+}
+
+.footer-bg {
+  box-shadow: 0 0 0 100vmax hsl(var(--b3) / var(--tw-bg-opacity));
+  clip-path: inset(0 -100vmax);
 }
 
 .logo-img {
